# mcp-chart-plugin

./: .env.example  .gitignore  HANDOFF.md  README.md  __init__.py  __main__.py  config.py  deepreport_stdio.py  prompt_utils.py  pyproject.toml
app/: __init__.py  demo_runner.py  server.py
assets/: baseline_chart_prompt.txt  chart_decision_user_prompt.txt  fact_extraction_document_block.txt  fact_extraction_system_prompt.txt  fact_extraction_user_prompt.txt  query_planning_gap_section.txt  query_planning_prompt.txt  query_planning_system_prompt.txt  query_planning_user_prompt.txt
clients/: __init__.py  agg_search.py  llm.py
core/: __init__.py  baseline_decider.py  chart_plugin.py  renderer.py
data/: __init__.py  csv_cases.py  review_payloads.py
schemas/: __init__.py  extract_chart_facts.tools.json  function_schemas.py  plan_chart_retrieval.tools.json
