[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-plugin-mcp"
version = "0.1.0"
description = "Delivery-oriented chart MCP package for deep-report-go enhancement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
chart-plugin-mcp = "chart_plugin_mcp.deepreport_stdio:main"

[tool.setuptools]
packages = [
  "chart_plugin_mcp",
  "chart_plugin_mcp.clients",
  "chart_plugin_mcp.core",
  "chart_plugin_mcp.schemas",
  "chart_plugin_mcp.vendor",
]

[tool.setuptools.package-dir]
chart_plugin_mcp = "."
chart_plugin_mcp.clients = "clients"
chart_plugin_mcp.core = "core"
chart_plugin_mcp.schemas = "schemas"
chart_plugin_mcp.vendor = "vendor"

[tool.setuptools.package-data]
chart_plugin_mcp = [
  "assets/*.txt",
  "schemas/*.json",
]
"chart_plugin_mcp.vendor" = [
  "*.js",
]
